# fiap_hackaton-5

./: .gitignore  README.md  pyproject.toml
app/: main.py
app/prompts/: security_prompts.py
app/services/: openai_service.py
